--- a/index.html
+++ b/index.html
@@ -3,9 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Travel Explorer - Home</title>
+    <link href = "styles/styles.css" rel ="stylesheet">
+    <script defer src = "scripts/script.js"></script>
 </head>
 <body>
-    
+    <div class ="wrapper">
+        <header>
+            <div class ="nav-bar">
+            <h1><a href="#">Travel Explorer</a></h1>
+            <a href="#menu" class="menu-btn" id="menu-btn">&#9776;</a>
+            <!-- <nav id = "menu"> -->
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="our-team.html">Our Team</a></li>
+                    <li><a href="login.html">Login</a></li>
+                 </ul>
+            </nav>
+            </div>
+            <!--End nav bar-->
+
+            <div class ="banner">
+                <img src="images/banner1.jpg" 
+                     alt="Mountain biker descending a rocky trail with Whistler's snow-capped mountains in the background"/>
+            </div>
+            <!--End of banner-->
+        </header>
+
+
+
+<main></main>
+
+
+
+        <footer>
+            <p>
+                &copy; 2024 Travel Explorer
+            </p>
+        </footer>
+    </div>  
+    <!--End of wrapper--> 
 </body>
 </html>
