--- a/login.html
+++ b/login.html
@@ -6,6 +6,12 @@
     <title>Travel Explorer - Login</title>
     <link href = "styles/styles.css" rel ="stylesheet">
     <script defer src = "scripts/script.js"></script>
+
+    <!-- Link to the Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <div class ="wrapper">
