--- a/index.html
+++ b/index.html
@@ -29,8 +29,13 @@
   </head>
   <body>
     <header>
-      <div class="nav-bar">
-        <p><a href="#">Travel Explorer</a></p>
+      <div class="nav-bar">  
+        <a href="#">          
+          <img 
+          class="logo"
+          src="images/logo.svg"
+          alt="A madeup logo for the Whistler Ski + Snowboard Festival"/>
+        </a>
         <a href="#menu" class="menu-btn" id="menu-btn">&#9776;</a>
         <!-- <nav id = "menu"> -->
         <nav>
@@ -68,48 +73,188 @@
 
       <!-- Section 1 -->
       <section class="index-content">
-        <section>
+        <section class="index-section-info">
           <h2>
-            <span>Welcome</span>
-            The Ultimate Winter Celebration
+            <span class="highlight-outline">Welcome</span>
+            <span>The Ultimate Winter Celebration </span>
           </h2>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Necessitatibus in est perferendis at ut eveniet incidunt, atque
-            aliquid, nostrum eius sint veniam. Eveniet quibusdam animi minima
-            fugiat atque vel maxime?
+            Join us at Whistler Blackcomb for the World Ski & Snowboard Festival
+            (WSSF), an exhilarating mix of action-packed sports, live music,
+            art, and culture. Whether you're here to carve the slopes or simply
+            soak up the high-energy atmosphere, this week-long celebration is
+            packed with extreme competitions, epic outdoor concerts, and
+            artistic showcases.
+          </p>
+          <p>
+            With Whistler's vibrant après-ski scene and stunning mountain
+            backdrop, there's no better place to end your winter season. Dive
+            into unforgettable adventures, from skiing and snowboarding to
+            exploring Whistler's lively spring activities.
           </p>
         </section>
 
+        <!-- Photo -->
+        <img src="images/index/groupofpeople.jpg"
+        alt="Group of skiiers standing and waiting on their skiis in the snow"
+        width="100%"
+        />
+
         <!-- Section 2 -->
-        <section>
+        <section class="index-section-about">
           <h2>
-            Where adventurous spirits <br />
-            <span>Go all out</span>
+            <span>Where adventurous spirits</span>
+            <span class="highlight-outline">Go all out</span>
           </h2>
           <button>Discover More</button>
         </section>
 
-        <!-- Activities -->
-        <section>
-          <h2>Activities</h2>
-          <button>See All Activities</button>
-          <!-- todo -->
+        <!-- Section 3 - Activities -->
+        <section class="index-section-activities">
+          <div>
+            <h2>Activities</h2>
+            <button>See All Activities</button>  
+          </div>
+
+          <div>
+            <article>
+              <img
+                src="./images/index/skiier.jpg"
+                alt="Skiier speeding by with a bloom of snow trailing behind"
+                width="200px"
+              />
+              <h3>Ski Race Extreme</h3>
+              <div class="tag">Skiing</div>
+            </article>
+            <!-- end of one activity  -->
+  
+            <article>
+              <img
+                src="./images/index/snowboarder.jpg"
+                alt="Snowboarder in flight as he is moving down a snowy slope"
+                width="200px"
+              />
+              <h3>Snowboard Blitz Battle</h3>
+              <div class="tag">Snowboarding</div>
+            </article>
+            <!-- end of one activity  -->
+
+            <article>
+              <img
+                src="./images/index/musicstage.jpg"
+                alt="Crowds looking at a performance on stage"
+                width="200px"
+              />
+              <h3>Music Concert Series</h3>
+              <div class="tag">Entertainment</div>
+            </article>
+            <!-- end of one activity  -->
+
+            <article>
+              <img
+                src="./images/index/theatre.jpg"
+                alt="Red empty chairs facing a theatre that is playing a movie"
+                width="200px"
+              />
+              <h3>72-hr Film Frenzy</h3>
+              <div class="tag">Entertainment</div>
+            </article>
+            <!-- end of one activity  -->
+          </div>
+        </section>
+
+        <!-- Section 4 - Team -->
+        <section class="index-section-team">
+          <div>
+            <h2>Team</h2>
+            <button>See Details</button>
+          </div>
+          <div>
           <article>
             <img
-              src="./images/index/skiier.jpg"
-              alt="Skiier speeding by with a bloom of snow trailing behind"
-              width="200px"
+              src="./images/gurdeep.jpg"
+              alt="Gurdeep sitting on a rock at the beach"
             />
-            <h3>Ski Race Extreme</h3>
-            <div>Skiing</div>
+            <p>Gurdeep</p>
+          </article>
+
+          <article>
+            <img
+              src="./images/trudy.jpg"
+              alt="Trudy in a room of human-sized balls inside teamLabs in Tokyo"
+            />
+            <p>Trudy</p>
+          </article>
+
+          <article>
+            <img
+              src="./images/gurdeep.jpg"
+              alt="Gurdeep sitting on a rock at the beach"
+            />
+            <p>Gurdeep</p>
           </article>
         </section>
+
+        <!-- final photo -->
+        <img
+            src="images/index/snowmountains2.jpg"
+            alt="Beautifully snow-covered mountains"
+            width="100%"
+          />
+      </div>
+
       </section>
     </main>
 
+    <!-- Footer -->
     <footer>
-      <p>&copy; 2024 Travel Explorer</p>
+      <div>
+        <div>
+          <img 
+          class="logo"
+          src="images/logo.svg"
+          alt="A madeup logo for the Whistler Ski + Snowboard Festival"/>
+          <h5>
+            <span>Whistler</span> 
+            <span>Ski + Snowboard</span> 
+            <span>Festival</span>
+        </h5>  
+        </div>
+                <!-- Socials -->
+                <div class="socials">
+                  <a href="#">
+                    <img src="images/social/instagram.svg"
+                    alt="Instagram logo" />
+                  </a>
+                  <a href="#">
+                    <img src="images/social/facebook.svg"
+                    alt="Facebook logo" />
+                  </a>
+                  <a href="#">
+                    <img src="images/social/tiktok.svg"
+                    alt="TikTok logo" />
+                  </a>
+                  <a href="#">
+                    <img src="images/social/youtube.svg"
+                    alt="Youtube logo" />
+                  </a>
+                </div>
+      </div>
+      <div>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="about.html">Activities</a></li>
+          <li><a href="our-team.html">Team</a></li>
+          <li><button>Login</button>
+          </li>
+        </ul>
+      </div>
+      <div>
+        <a href="#">Privacy Policy</a>
+        <a href="#">Terms & Conditions</a>
+      </div>
+      <p>&copy; 2024 SSD Team - Gurdeep, Trudy, Iryana</p>
     </footer>
 
     <!--End of wrapper-->
