Starting the desktop layout

--- a/index.html
+++ b/index.html
@@ -109,6 +109,13 @@
           <button>Discover More</button>
         </section>
 
+        <!-- Photo -->
+        <img src="images/index/snowymountains1.jpg"
+        alt="Group of skiiers standing and waiting on their skiis in the snow"
+        width="100%"
+        />
+
+             
         <!-- Section 3 - Activities -->
         <section class="index-section-activities">
           <div>
@@ -121,10 +128,11 @@
               <img
                 src="./images/index/skiier.jpg"
                 alt="Skiier speeding by with a bloom of snow trailing behind"
-                width="200px"
               />
+            <div>
               <h3>Ski Race Extreme</h3>
               <div class="tag">Skiing</div>
+            </div>
             </article>
             <!-- end of one activity  -->
   
@@ -132,10 +140,11 @@
               <img
                 src="./images/index/snowboarder.jpg"
                 alt="Snowboarder in flight as he is moving down a snowy slope"
-                width="200px"
               />
-              <h3>Snowboard Blitz Battle</h3>
-              <div class="tag">Snowboarding</div>
+             <div>
+                <h3>Snowboard Blitz Battle</h3>
+                <div class="tag">Snowboarding</div>
+             </div>
             </article>
             <!-- end of one activity  -->
 
@@ -143,10 +152,11 @@
               <img
                 src="./images/index/musicstage.jpg"
                 alt="Crowds looking at a performance on stage"
-                width="200px"
               />
+             <div>
               <h3>Music Concert Series</h3>
               <div class="tag">Entertainment</div>
+             </div>
             </article>
             <!-- end of one activity  -->
 
@@ -154,10 +164,11 @@
               <img
                 src="./images/index/theatre.jpg"
                 alt="Red empty chairs facing a theatre that is playing a movie"
-                width="200px"
               />
+            <div>
               <h3>72-hr Film Frenzy</h3>
               <div class="tag">Entertainment</div>
+            </div>
             </article>
             <!-- end of one activity  -->
           </div>
