adding background text

--- a/index.html
+++ b/index.html
@@ -100,6 +100,9 @@
         width="100%"
         />
 
+        <!-- BG text -->
+        <p class="info-bg-text">Snowboarding Skiing</p>
+
         <!-- Section 2 -->
         <section class="index-section-about">
           <h2>
@@ -115,7 +118,9 @@
         width="100%"
         />
 
-             
+        <!-- BG text -->            
+        <p class="info-bg-text">adventure</p>
+
         <!-- Section 3 - Activities -->
         <section class="index-section-activities">
           <div>
@@ -173,6 +178,9 @@
             <!-- end of one activity  -->
           </div>
         </section>
+
+        <!-- BG text -->
+        <p class="info-bg-text">Activities</p>  
 
         <!-- Section 4 - Team -->
         <section class="index-section-team">
