--- a/index.html
+++ b/index.html
@@ -220,7 +220,12 @@
             alt="Beautifully snow-covered mountains"
             width="100%"
           />
-      </div>
+
+      <!-- decorative element -->
+       <div class="decorative-S-line">
+        <img  src="images/index/S-line.png" />
+       </div>
+    </div>
 
       </section>
     </main>
