seperate the styles on footer and header from the other pages

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <script defer src="scripts/script.js"></script>
   </head>
   <body>
-    <header>
+    <header class="home-header">
       <div class="nav-bar">  
         <a href="#">          
           <img 
@@ -68,6 +68,11 @@
           src="images/index/skiiers1.jpg"
           alt="One skier doing tricks in the air"
         /> -->
+
+        <!-- Decorative element - no alt text -->
+        <img class="decoratve-S-blue" src="images/index/S-blue.png" />
+        <img class="decoratve-S-green" src="images/index/S-green.png" />
+                
       </div>
       <!--End of banner-->
 
@@ -231,7 +236,7 @@
     </main>
 
     <!-- Footer -->
-    <footer>
+    <footer class="home-footer"">
       <div>
         <div>
           <img 
