--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             <span>Where adventurous spirits</span>
             <span class="highlight-outline">Go all out</span>
           </h2>
-          <button>Discover More</button>
+          <button><a href="about.html">Discover More</a></button>
         </section>
 
         <!-- Photo -->
@@ -130,7 +130,7 @@
         <section class="index-section-activities">
           <div>
             <h2>Activities</h2>
-            <button>See All Activities</button>  
+            <button><a href="about.html">See All Activities</a></button>  
           </div>
 
           <div>
@@ -191,7 +191,7 @@
         <section class="index-section-team">
           <div>
             <h2>Team</h2>
-            <button>See Details</button>
+            <button><a href="our-team.html">See Details</a></button>
           </div>
           <div>
           <article>
@@ -275,7 +275,7 @@
           <li><a href="about.html">About</a></li>
           <li><a href="about.html">Activities</a></li>
           <li><a href="our-team.html">Team</a></li>
-          <li><button>Login</button>
+          <li><button><a href="login.html">Login</a></button>
           </li>
         </ul>
       </div>
