--- a/login.html
+++ b/login.html
@@ -1,71 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Travel Explorer - Login</title>
-    <link href = "styles/styles.css" rel ="stylesheet">
-    <script defer src = "scripts/script.js"></script>
+    <link href="styles/styles.css" rel="stylesheet" />
+    <script defer src="scripts/script.js"></script>
 
     <!-- Link to the Google Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <div class="wrapper">
+      <header>
+        <div class="nav-bar">
+          <h1><a href="#">Travel Explorer</a></h1>
+          <a href="#menu" class="menu-btn" id="menu-btn">&#9776;</a>
+          <!-- <nav id = "menu"> -->
+          <nav>
+            <ul>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="event.html">Event</a></li>
+              <li><a href="about.html">About</a></li>
+              <li><a href="our-team.html">Our Team</a></li>
+              <li><a href="login.html">Login</a></li>
+            </ul>
+          </nav>
+        </div>
+        <!--End nav bar-->
+      </header>
+      <main class="login-container">
+        <article class="login-box">
+          <h1>Login To Travel Explorer</h1>
 
-</head>
-<body>
-    <div class ="wrapper">
-        <header>
-            <div class ="nav-bar">
-            <h1><a href="#">Travel Explorer</a></h1>
-            <a href="#menu" class="menu-btn" id="menu-btn">&#9776;</a>
-            <!-- <nav id = "menu"> -->
-            <nav>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="our-team.html">Our Team</a></li>
-                    <li><a href="login.html">Login</a></li>
-                 </ul>
-            </nav>
+          <form action="login" method="post" class="login-form">
+            <div class="input-box">
+              <label for="email">Email</label>
+              <input
+                type="email"
+                id="email"
+                name="email"
+                placeholder="Enter your email"
+                required
+              />
             </div>
-            <!--End nav bar-->
-        </header>
-        <main class="login-container">
-            <article class="login-box">
-                <h1>Login To Travel Explorer</h1>
 
-              <form action="login" method="post" class="login-form">
-                <div class="input-box">
-                <label for="email">Email</label>
-                <input type="email" id="email" name="email" 
-                       placeholder="Enter your email" required/>
-                </div>
+            <div class="input-box">
+              <label for="password">Password</label>
+              <input
+                type="password"
+                id="password"
+                name="password"
+                placeholder="Enter your password"
+                required
+              />
+            </div>
 
-                <div class="input-box">
-                <label for="password">Password</label>
-                <input type="password" id="password" name="password"
-                       placeholder="Enter your password" required/>
-                </div>
-                
-                <div class="input-box">
-                <button type="submit" class="login-btn">Login</button>
-                </div>
-                <p class ="signup">Don't have account ?
-                    <a href="#">Sign Up</a>
-                </p>
-              </form>
-
-            </article>
-
-          </main>
-
-          <footer>
-            <p>
-                &copy; 2024 Travel Explorer
+            <div class="input-box">
+              <button type="submit" class="login-btn">Login</button>
+            </div>
+            <p class="signup">
+              Don't have account ?
+              <a href="#">Sign Up</a>
             </p>
-        </footer>
-    </div>  
-    <!--End of wrapper--> 
-</body>
+          </form>
+        </article>
+      </main>
+
+      <footer>
+        <p>&copy; 2024 Travel Explorer</p>
+      </footer>
+    </div>
+    <!--End of wrapper-->
+  </body>
 </html>
