--- a/our-team.html
+++ b/our-team.html
@@ -6,12 +6,14 @@
     <title>Travel Explorer - Our Team</title>
     <link href="styles/styles.css" rel="stylesheet" />
     <script defer src="scripts/script.js"></script>
-  
+
     <!-- Link to the Google Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
- 
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div class="wrapper">
@@ -23,6 +25,7 @@
           <nav>
             <ul>
               <li><a href="index.html">Home</a></li>
+              <li><a href="event.html">Event</a></li>
               <li><a href="about.html">About</a></li>
               <li><a href="our-team.html">Our Team</a></li>
               <li><a href="login.html">Login</a></li>
@@ -47,7 +50,7 @@
         <!-- Div to display selected member info -->
         <div id="team-info" class="team-info">
           <h3></h3>
-          <!-- <h3>Select a team member to see their information</h3> -->      
+          <!-- <h3>Select a team member to see their information</h3> -->
           <div id="image-container"></div>
           <p></p>
           <!-- <p id ="individuals"></p> -->
