Adding paragraph on homepage. Adding anchor links on the event page

--- a/event.html
+++ b/event.html
@@ -40,11 +40,10 @@
         <!-- <nav id = "menu"> -->
         <nav>
           <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="event.html">Event</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="our-team.html">Our Team</a></li>
-            <li><a href="login.html">Login</a></li>
+            <li><a href="#start">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#activities">Activities</a></li>
+            <li><a href="#team">Team</a></li>
           </ul>
         </nav>
       </div>
@@ -54,9 +53,10 @@
     <main class="home-container">
       <!-- Banner -->
       <div class="banner">
+
         <!-- Header Text -->
         <h1>
-          <span class="title-whistler">Whistler</span>
+          <span class="title-whistler"><a name="start">Whistler</a></span>
           <span class="title-black-box">
             <span>Ski + </span>
             <span>Snowboard</span>
@@ -81,7 +81,7 @@
       <section class="index-content">
         <section class="index-section-info">
           <h2>
-            <span class="highlight-outline">Welcome</span>
+            <span class="highlight-outline"><a name="about">Welcome</a></span>
             <span>The Ultimate Winter Celebration </span>
           </h2>
           <p>
@@ -130,7 +130,7 @@
         <!-- Section 3 - Activities -->
         <section class="index-section-activities">
           <div>
-            <h2>Activities</h2>
+            <h2><a name="activities">Activities</a></h2>
             <button><a href="about.html">See All Activities</a></button>  
           </div>
 
@@ -191,7 +191,7 @@
         <!-- Section 4 - Team -->
         <section class="index-section-team">
           <div>
-            <h2>Team</h2>
+            <h2><a name="team">Team</a></h2>
             <button><a href="our-team.html">See Details</a></button>
           </div>
           <div>
@@ -272,11 +272,10 @@
       </div>
       <div>
         <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="about.html">Activities</a></li>
-          <li><a href="our-team.html">Team</a></li>
-          <li><button><a href="login.html">Login</a></button>
+          <li><a href="#">Home</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#activities">Activities</a></li>
+          <li><a href="#team">Team</a></li>
           </li>
         </ul>
       </div>
