--- a/index.html
+++ b/index.html
@@ -37,8 +37,13 @@
       <main class="index-container">
         <article>
           <h1>Welcome</h1>
-          <!-- todo: for Gurdeep. Please write a description here -->
-          <p></p>
+          <p>
+            Welcome to Travel Explorer, your go-to guide for amazing
+            destinations! Here, you'll find tips and insights on the best places
+            to visit, starting with Whistler – a beautiful mountain town filled
+            with outdoor adventures and scenic views. Let us help you plan your
+            next trip or simply enjoy learning about new places!
+          </p>
           <button><a href="event.html">Check out latest events</a></button>
         </article>
       </main>
