more adjustments on the event page

--- a/event.html
+++ b/event.html
@@ -30,7 +30,7 @@
   <body>
     <header class="home-header">
       <div class="nav-bar">  
-        <a href="#">          
+        <a href="#start">          
           <img 
           class="logo"
           src="images/logo.svg"
@@ -40,7 +40,7 @@
         <!-- <nav id = "menu"> -->
         <nav>
           <ul>
-            <li><a href="#start">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#activities">Activities</a></li>
             <li><a href="#team">Team</a></li>
@@ -53,10 +53,10 @@
     <main class="home-container">
       <!-- Banner -->
       <div class="banner">
-
+        <a name="start"></a>
         <!-- Header Text -->
         <h1>
-          <span class="title-whistler"><a name="start">Whistler</a></span>
+          <span class="title-whistler">Whistler</span>
           <span class="title-black-box">
             <span>Ski + </span>
             <span>Snowboard</span>
@@ -240,10 +240,12 @@
     <footer class="home-footer"">
       <div>
         <div>
-          <img 
-          class="logo"
-          src="images/logo.svg"
-          alt="A madeup logo for the Whistler Ski + Snowboard Festival"/>
+          <a href="#start">          
+            <img 
+            class="logo"
+            src="images/logo.svg"
+            alt="A madeup logo for the Whistler Ski + Snowboard Festival"/>
+          </a>
           <h5>
             <span>Whistler</span> 
             <span>Ski + Snowboard</span> 
@@ -272,7 +274,7 @@
       </div>
       <div>
         <ul>
-          <li><a href="#">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#activities">Activities</a></li>
           <li><a href="#team">Team</a></li>
