fix the position of the anchor links on the event page

--- a/event.html
+++ b/event.html
@@ -78,10 +78,11 @@
       <!--End of banner-->
 
       <!-- Section 1 -->
-      <section class="index-content">
+      <section class="index-content">         
         <section class="index-section-info">
+          <a class="about-anchor" name="about">Test</a>
           <h2>
-            <span class="highlight-outline"><a name="about">Welcome</a></span>
+            <span class="highlight-outline">Welcome</span>
             <span>The Ultimate Winter Celebration </span>
           </h2>
           <p>
@@ -125,12 +126,12 @@
         />
 
         <!-- BG text -->            
-        <p class="info-bg-text">adventure</p>
+        <p class="info-bg-text"><a name="activities">adventure</a></p>
 
         <!-- Section 3 - Activities -->
         <section class="index-section-activities">
           <div>
-            <h2><a name="activities">Activities</a></h2>
+            <h2>Activities</h2>
             <button><a href="about.html">See All Activities</a></button>  
           </div>
 
@@ -185,13 +186,14 @@
           </div>
         </section>
 
+        <a name="team"></a>
         <!-- BG text -->
         <p class="info-bg-text">Activities</p>  
 
         <!-- Section 4 - Team -->
         <section class="index-section-team">
           <div>
-            <h2><a name="team">Team</a></h2>
+            <h2>Team</h2>
             <button><a href="our-team.html">See Details</a></button>
           </div>
           <div>
@@ -237,7 +239,7 @@
     </main>
 
     <!-- Footer -->
-    <footer class="home-footer"">
+    <footer class="home-footer">
       <div>
         <div>
           <a href="#start">          
