--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
           <nav>
             <ul>
               <li><a href="index.html">Home</a></li>
-              <li><a href="event.html">Event</a></li>
+              <li><a href="event.html" class="eventLink">Event</a></li>
               <li><a href="about.html">About</a></li>
               <li><a href="our-team.html">Our Team</a></li>
               <li><a href="login.html">Login</a></li>
@@ -118,7 +118,7 @@
       </main>
 
       <footer>
-        <p>&copy; 2024 Travel Explorer</p>
+        <p>&copy; 2024 Travel Explorer- Gurdeep | Trudy | Iryna</p>
       </footer>
     </div>
     <!--End of wrapper-->
