adjustments to the event page

--- a/event.html
+++ b/event.html
@@ -80,7 +80,7 @@
       <!-- Section 1 -->
       <section class="index-content">         
         <section class="index-section-info">
-          <a class="about-anchor" name="about">Test</a>
+          <a class="about-anchor" name="about"></a>
           <h2>
             <span class="highlight-outline">Welcome</span>
             <span>The Ultimate Winter Celebration </span>
@@ -108,7 +108,7 @@
         />
 
         <!-- BG text -->
-        <p class="info-bg-text">Snowboarding Skiing</p>
+        <p class="info-bg-text unselectable">Snowboarding Skiing</p>
 
         <!-- Section 2 -->
         <section class="index-section-about">
@@ -126,7 +126,7 @@
         />
 
         <!-- BG text -->            
-        <p class="info-bg-text"><a name="activities">adventure</a></p>
+        <p class="info-bg-text unselectable"><a name="activities">adventurous spirits</a></p>
 
         <!-- Section 3 - Activities -->
         <section class="index-section-activities">
@@ -188,7 +188,7 @@
 
         <a name="team"></a>
         <!-- BG text -->
-        <p class="info-bg-text">Activities</p>  
+        <p class="info-bg-text unselectable">Snow Activities</p>  
 
         <!-- Section 4 - Team -->
         <section class="index-section-team">
@@ -224,7 +224,7 @@
 
         <!-- final photo -->
         <img
-            src="images/index/snowmountains2.jpg"
+            src="images/banner.jpg"
             alt="Beautifully snow-covered mountains"
             width="100%"
           />
