updates for navigation and linking back to the main webpage

--- a/event.html
+++ b/event.html
@@ -40,7 +40,7 @@
         <!-- <nav id = "menu"> -->
         <nav>
           <ul>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="#start">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#activities">Activities</a></li>
             <li><a href="#team">Team</a></li>
@@ -276,14 +276,16 @@
       </div>
       <div>
         <ul>
-          <li><a href="index.html">Home</a></li>
+        
           <li><a href="#about">About</a></li>
           <li><a href="#activities">Activities</a></li>
           <li><a href="#team">Team</a></li>
+          <li><a href="index.html">Back to main</a></li>
           </li>
         </ul>
       </div>
       <div>
+
         <a href="#">Privacy Policy</a>
         <a href="#">Terms & Conditions</a>
       </div>
