adding a placeholder image

--- a/event.html
+++ b/event.html
@@ -215,10 +215,10 @@
 
           <article>
             <img
-              src="./images/gurdeep.jpg"
-              alt="Gurdeep sitting on a rock at the beach"
+              src="./images/placeholder-profile.jpg"
+              alt="Snowboarder in purple moving down the snowy mountain"
             />
-            <p>Gurdeep</p>
+            <p>Iryana</p>
           </article>
         </section>
 
