--- a/about.html
+++ b/about.html
@@ -44,13 +44,13 @@
               <img src="images/skiing.jpg" alt="Skiing in Whistler" />
               <h3>Skiing & Snowboarding</h3>
               <p>Enjoy world-class slopes and breathtaking views.</p>
-              <a href="#" class="btn">Learn More</a>
+              <a href="https://www.whistler.com/" class="btn">Learn More</a>
             </div>
             <div class="activity">
               <img src="images/hiking.jpg" alt="Hiking in Whistler" />
               <h3>Hiking & Trails</h3>
               <p>Explore scenic hiking trails for all skill levels.</p>
-              <a href="#" class="btn">Learn More</a>
+              <a href="https://www.whistler.com/activities/hiking/" class="btn">Learn More</a>
             </div>
             <!-- Add more activities here -->
           </div>
