updated all pages

--- a/about.html
+++ b/about.html
@@ -8,6 +8,9 @@
     <!-- Link to our stylesheet -->
     <link href="styles/styles.css" rel="stylesheet" />
 
+      <!-- Link to our javaScript -->
+      <script defer src="scripts/script.js"></script>
+
     <!-- Link to the Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
