ensure filenames are lowercased

--- a/event.html
+++ b/event.html
@@ -67,8 +67,8 @@
         /> -->
 
         <!-- Decorative element - no alt text -->
-        <img class="decorative-S-blue" alt="" src="images/index/S-blue.png" />
-        <img class="decorative-S-green" alt="" src="images/index/S-green.png" />
+        <img class="decorative-s-blue" alt="" src="images/index/s-blue.png" />
+        <img class="decorative-s-green" alt="" src="images/index/s-green.png" />
       </div>
       <!--End of banner-->
       <!-- Section 1 -->
@@ -226,8 +226,8 @@
         <img src="images/banner.jpg" alt="Beautifully snow-covered mountains" />
 
         <!-- decorative element -->
-        <div class="decorative-S-line">
-          <img src="images/index/S-line.png" alt="" />
+        <div class="decorative-s-line">
+          <img src="images/index/s-line.png" alt="" />
         </div>
       </div>
     </main>
