adding another fix to ensure images are clipped - recommendation from devtool warning messages

--- a/event.html
+++ b/event.html
@@ -8,8 +8,8 @@
     <!-- Link to our stylesheet -->
     <link href="styles/styles.css" rel="stylesheet" />
 
-     <!-- Link to our javaScript -->
-     <script defer src="scripts/script.js"></script>
+    <!-- Link to our javaScript -->
+    <script defer src="scripts/script.js"></script>
 
     <!-- Link to the Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -70,8 +70,18 @@
         /> -->
 
         <!-- Decorative element - no alt text -->
-        <img class="decorative-s-blue" alt="" src="images/index/s-blue.png" />
-        <img class="decorative-s-green" alt="" src="images/index/s-green.png" />
+        <img
+          class="decorative-s-blue"
+          alt=""
+          src="images/index/s-blue.png"
+          style="overflow: clip !important"
+        />
+        <img
+          class="decorative-s-green"
+          alt=""
+          src="images/index/s-green.png"
+          style="overflow: clip !important"
+        />
       </div>
       <!--End of banner-->
       <!-- Section 1 -->
@@ -230,7 +240,11 @@
 
         <!-- decorative element -->
         <div class="decorative-s-line">
-          <img src="images/index/s-line.png" alt="" />
+          <img
+            src="images/index/s-line.png"
+            alt=""
+            style="overflow: clip !important"
+          />
         </div>
       </div>
     </main>
