added iryna's info

--- a/event.html
+++ b/event.html
@@ -227,7 +227,7 @@
 
             <article>
               <img
-                src="./images/placeholder-profile.jpg"
+                src="./images/iryna.jpg"
                 alt="Snowboarder in purple moving down the snowy mountain"
               />
               <h3>Iryana</h3>
