--- a/our-team.html
+++ b/our-team.html
@@ -81,7 +81,7 @@
           <div class="tmember3">
             <article id="team-member-iryna">
               <img
-                src="images/placeholder-profile.jpg"
+                src="images/iryna.jpg"
                 alt="Team member 3 - Iryna Yampolska"
               />
               <h3>Iryna Yampolska</h3>
