minor adjustments to iryna's image/info

--- a/event.html
+++ b/event.html
@@ -227,10 +227,11 @@
 
             <article>
               <img
+                id="iryna"
                 src="./images/iryna.jpg"
                 alt="Snowboarder in purple moving down the snowy mountain"
               />
-              <h3>Iryana</h3>
+              <h3>Iryna</h3>
             </article>
           </div>
         </section>
@@ -292,7 +293,7 @@
         <a href="#">Privacy Policy</a>
         <a href="#">Terms & Conditions</a>
       </div>
-      <p>&copy; 2024 SSD Team - Gurdeep, Trudy, Iryana</p>
+      <p>&copy; 2024 SSD Team - Gurdeep, Trudy, Iryna</p>
     </footer>
 
     <!--End of wrapper-->
